# quaternion-mpc

./: .gitignore  .gitmodules  README.md  install.bash
humanoid_description/: CMakeLists.txt  package.xml
humanoid_description/config/: mit_humanoid_joint_controllers.yaml
humanoid_description/xacro/mit_humanoid/: arm.xacro  gazebo_config.xacro  leg.xacro  leg_transmission.xacro  mit_humanoid.urdf  mit_humanoid.xacro
humanoid_gazebo/: CMakeLists.txt  package.xml
humanoid_gazebo/launch/: normal.launch
humanoid_gazebo/src/: set_default_body_pose.cpp  set_default_joint_pos.cpp
humanoid_gazebo/worlds/: earth.world
humanoid_mpc_control/: CMakeLists.txt  package.xml  quat_mpc_config.yaml
humanoid_mpc_control/include/: GazeboInterface.h  HumanoidModel.h  QuatMpc.h  RobotState.h  Utils.h
humanoid_mpc_control/launch/: quat_mpc.launch
humanoid_mpc_control/src/: GazeboInterface.cpp  HumanoidModel.cpp  Kinematics.cpp  Main.cpp  QuatMpc.cpp  RobotState.cpp  Test.cpp  Utils.cpp
legged_ctrl/: CMakeLists.txt  euler_mpc_config.yaml  package.xml  quat_mpc_config.yaml
legged_ctrl/config/: gazebo_a1_convex_mpc.yaml  gazebo_a1_quat_mpc.yaml  gazebo_go1_convex_mpc.yaml  gazebo_go1_quat_mpc.yaml  hardware_a1_convex_mpc.yaml  hardware_go1_convex_mpc.yaml  hardware_go1_quat_mpc.yaml
legged_ctrl/include/: GazeboInterface.h  GyrostatEulerMpc.h  GyrostatModel.h  GyrostatQuatMpc.h  Kinematics.h  LeggedMpc.h  LeggedParams.h  LeggedState.h  RobotState.h
legged_ctrl/include/estimation/: BasicKF.h
legged_ctrl/include/interfaces/: BaseInterface.h  GazeboInterface.h  HardwareInterface.h
legged_ctrl/include/mpc/: ConvexMpc.h  LeggedMpc.h  QuatMpc.h
legged_ctrl/include/utils/: A1Kinematics.h  AltroUtils.h  Go1Dynamics.h  LeggedContactFSM.h  LeggedLogger.hpp  LeggedSafetyChecker.hpp  MovingWindowFilter.hpp  QuaternionUtils.h  Utils.h
legged_ctrl/launch/: euler_mpc.launch  gazebo_a1_convex_mpc.launch  gazebo_a1_quat_mpc.launch  gazebo_go1_convex_mpc.launch  gazebo_go1_quat_mpc.launch  hardware_a1_convex_mpc.launch  hardware_go1_convex_mpc.launch  hardware_go1_quat_mpc.launch  quat_mpc.launch
legged_ctrl/src/: GazeboInterface.cpp  GyrostatEulerMpc.cpp  GyrostatModel.cpp  GyrostatQuatMpc.cpp  LeggedMpc.cpp  LeggedState.cpp  Main.cpp  RobotState.cpp  Utils.cpp
legged_ctrl/src/estimation/: BasicKF.cpp
legged_ctrl/src/interfaces/: BaseInterface.cpp  GazeboInterface.cpp  HardwareInterface.cpp
legged_ctrl/src/mpc/: ConvexMpc.cpp  LeggedMpc.cpp  QuatMpc.cpp
legged_ctrl/src/test/: TestClock.cpp  TestInvDynamics.cpp  TestInvKin.cpp  TestQuatUtils.cpp
legged_ctrl/src/test/test_altro/: AltroTestUtils.cpp  AltroTestUtils.hpp  TestAltroApi.cpp  TestAltroConvexMpc.cpp  TestAltroQuatMpc.cpp  TestAltroTrotQuatMpc.cpp  TestBicycle.cpp  TestPendulum.cpp  convex_mpc.json  quadruped_quat_test.json  quat_mpc_test.json  scotty_mpc.json  trot_quat_mpc_test.json
legged_ctrl/src/utils/: A1Kinematics.cpp  AltroUtils.cpp  Go1Dynamics.cpp  LeggedContactFSM.cpp  QuaternionUtils.cpp  Utils.cpp
robots/a1_description/config/: robot_control.yaml
robots/a1_description/xacro/: gazebo.xacro  robot.xacro
robots/a1_rw_description/: CMakeLists.txt  package.xml
robots/a1_rw_description/config/: robot_control.yaml
robots/a1_rw_description/launch/: a1_rw_rviz.launch
robots/a1_rw_description/urdf/: a1_rw.urdf
robots/a1_rw_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  transmission.xacro
robots/go1_description/xacro/: const.xacro  gazebo.xacro
unitree_controller/: CMakeLists.txt
unitree_controller/src/: body.cpp  move_publisher.cpp
unitree_gazebo/: CMakeLists.txt
unitree_gazebo/launch/: normal.launch  test.launch
unitree_gazebo/plugin/: draw_force_plugin.cc
unitree_gazebo/worlds/: earth.world  slope.STL  slope.world  space.world  stairs.world
unitree_legged_control/: CMakeLists.txt
unitree_legged_msgs/: CMakeLists.txt
unitree_legged_real/: CMakeLists.txt
