<?xml version="1.0"?>
<package format="2">
    <name>humanoid_description</name>
    <version>1.0.0</version>
    <description>This package contains the URDF model of some humanoid robots.</description>

    <maintainer email="zixinzhang2027@u.northwestern.edu">Zixin Zhang</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>