<?xml version="1.0"?>
<package format="2">
    <name>legged_ctrl</name>
    <version>0.0.0</version>
    <description>MPC controller for humanoid robots.</description>

    <maintainer email="zixinzhang2027@u.northwestern.edu">Zixin Zhang</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>unitree_legged_msgs</depend>

</package>